save with the proper .doc variant (fdo#32219)

KFileDialog::currentFilter() returns only the pattern and not
the full filter text, so *.doc alone is ambiguous.