fpicker/source/unx/kde4/KDE4FilePicker.hxx
@@ -79,9 +79,6 @@ protected:
     //running filter string to add to dialog
     QString _filter;
 
-    //filter for reverse lookup of filter text
-    QHash<QString, QString> _filters;
-
     //mapping of SAL control ID's to created custom controls
     QHash<sal_Int16, QWidget*> _customWidgets;
 
